--- a/관통1.ipynb
+++ b/관통1.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### API 이해하기\n",
+    "#### 1. API 이해하기\n",
     "\n",
     "- 실습 목표 : 파이썬으로, **인터넷에 있는 날씨 정보**를 가져와, 내가 원하는 정보만 출력\n"
    ]
